Creando index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Pokemon</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./assets/logo.svg" alt="Logo" />
+      <nav>
+        <ul>
+          <li><a href="index.html" target="_blank">Home</a></li>
+          <li><a href="buyCards.html" target="_blank">BuyCards</a></li>
+          <li><a href="ourBlog.html" target="_blank">OurBlog</a></li>
+        </ul>
+      </nav>
+      <button>Dark Mode</button>
+    </header>
+    <main>
+      <article>
+        <h4>Discover the treasures awaiting for you...</h2>
+        <h1>POKEMON ACTION FIGURES, TOYS AND CARDS</h1>
+        <p>Pokémon is a media franchise owned by video game giant Nintendo and created by Satoshi Tajiri around 1995. Originally released as a pair of interlinkable Game Boy role-playing video games, Pokémon has since become the 2nd most successful and lucrative video game-based media franchise in the world, behind only Nintendo's Mario series.</p>
+        <div>
+          <a href="ourBlog.html">Go to our blog</a>
+          <a href="buyCards.html">Buy Cards</a>
+        </div>
+      </article>
+      <aside>
+        <img src="assets/ash-leaves-anime 1.png" alt="Ash leaves anime">
+      </aside>
+    </main>
+    <footer>
+     <section>
+      <img src="assets/logo.svg" alt="Logo">
+      <p>Our vision is to provide convenience and help increase your sales business</p>
+      <div>
+        <ul>
+          <li><i class="fa-brands fa-square-facebook"></i></li>
+          <li><i class="fa-brands fa-square-twitter"></i></li>
+          <li><i class="fa-brands fa-square-instagram"></i></li>
+        </ul>
+      </div>
+    </section>
+     <section>
+      <h3>About</h3>
+      <ul>
+      <li>How it works</li>
+      <li>Featured</li>
+      <li>Partnership</li>
+      <li>Bussiness Relation</li>
+    </ul>
+     </section>
+     <section>
+      <h3>Community</h3>
+      <ul>
+      <li>Events</li>
+      <li>Blog</li>
+      <li>Podcast</li>
+      <li>Invite a friend</li>
+    </ul>
+     </section>
+     <section>
+       <h3>Socials</h3>
+       <li>Discord</li>
+       <li>Instagram</li>
+       <li>Twitter</li>
+       <li>Facebook</li>
+     </section>
+    </footer>
+  </body>
 </html>
