--- a/index.html
+++ b/index.html
@@ -10,74 +10,99 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;600;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Pokemon</title>
   </head>
   <body>
     <header>
       <img src="./assets/logo.svg" alt="Logo" />
-      <nav>
-        <ul>
-          <li><a href="index.html" target="_blank">Home</a></li>
-          <li><a href="buyCards.html" target="_blank">BuyCards</a></li>
-          <li><a href="ourBlog.html" target="_blank">OurBlog</a></li>
-        </ul>
-      </nav>
-      <button>Dark Mode</button>
+      <div class="container">
+        <nav>
+          <ul class="container-nav-ul">
+            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="buyCards.html" target="_blank">BuyCards</a></li>
+            <li><a href="ourBlog.html" target="_blank">OurBlog</a></li>
+          </ul>
+        </nav>
+        <button>Dark Mode</button>
+      </div>
     </header>
     <main>
-      <article>
-        <h4>Discover the treasures awaiting for you...</h2>
+      <section>
+        <p>Discover the treasures awaiting for you...</p>
         <h1>POKEMON ACTION FIGURES, TOYS AND CARDS</h1>
-        <p>Pokémon is a media franchise owned by video game giant Nintendo and created by Satoshi Tajiri around 1995. Originally released as a pair of interlinkable Game Boy role-playing video games, Pokémon has since become the 2nd most successful and lucrative video game-based media franchise in the world, behind only Nintendo's Mario series.</p>
-        <div>
+        <p>
+          Pokémon is a media franchise owned by video game giant Nintendo and
+          created by Satoshi Tajiri around 1995. Originally released as a pair
+          of interlinkable Game Boy role-playing video games, Pokémon has since
+          become the 2nd most successful and lucrative video game-based media
+          franchise in the world, behind only Nintendo's Mario series.
+        </p>
+        <div class="container-links">
           <a href="ourBlog.html">Go to our blog</a>
           <a href="buyCards.html">Buy Cards</a>
         </div>
-      </article>
+      </section>
       <aside>
-        <img src="assets/ash-leaves-anime 1.png" alt="Ash leaves anime">
+        <img
+          class="img-ash"
+          src="assets/ash-leaves-anime 1.png"
+          alt="Ash leaves anime"
+        />
       </aside>
     </main>
     <footer>
-     <section>
-      <img src="assets/logo.svg" alt="Logo">
-      <p>Our vision is to provide convenience and help increase your sales business</p>
       <div>
-        <ul>
-          <li><i class="fa-brands fa-square-facebook"></i></li>
-          <li><i class="fa-brands fa-square-twitter"></i></li>
-          <li><i class="fa-brands fa-square-instagram"></i></li>
-        </ul>
+        <img src="assets/logo.svg" alt="Logo" />
+        <p>
+          Our vision is to provide convenience and help increase your sales
+          business
+        </p>
+        <div>
+          <ul class="icons">
+            <li><i class="fa-brands fa-square-facebook"></i></li>
+            <li><i class="fa-brands fa-square-twitter"></i></li>
+            <li><i class="fa-brands fa-square-instagram"></i></li>
+          </ul>
+        </div>
       </div>
-    </section>
-     <section>
-      <h3>About</h3>
-      <ul>
-      <li>How it works</li>
-      <li>Featured</li>
-      <li>Partnership</li>
-      <li>Bussiness Relation</li>
-    </ul>
-     </section>
-     <section>
-      <h3>Community</h3>
-      <ul>
-      <li>Events</li>
-      <li>Blog</li>
-      <li>Podcast</li>
-      <li>Invite a friend</li>
-    </ul>
-     </section>
-     <section>
-       <h3>Socials</h3>
-       <li>Discord</li>
-       <li>Instagram</li>
-       <li>Twitter</li>
-       <li>Facebook</li>
-     </section>
+      <div class="container-ab-com-soc">
+        <div>
+          <ul>
+            <li class="title">About</li>
+            <li>How it works</li>
+            <li>Featured</li>
+            <li>Partnership</li>
+            <li>Bussiness Relation</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li class="title">Community</li>
+            <li>Events</li>
+            <li>Blog</li>
+            <li>Podcast</li>
+            <li>Invite a friend</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li class="title">Socials</li>
+            <li>Discord</li>
+            <li>Instagram</li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
