agregando cards y su correspondiente paginacion con la api pokeapi.co

--- a/buyCards.html
+++ b/buyCards.html
@@ -69,118 +69,18 @@
             <a href="">Water</a>
           </ul>
           <hr>
-          <article class="container-pokemons">
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/charmander.png" alt="charmander">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/squirtle.png" alt="squirtle">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/eevee.png" alt="eevee">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon"><img src="assets/picachu.png" alt="picachu"></div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/charmander.png" alt="charmander">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/squirtle.png" alt="squirtle">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon">
-              <img src="assets/eevee.png" alt="eevee">
-            </div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="name">
-              <p><b>Name</b></p>
-              <i class="fa-regular fa-heart"></i>
-            </div>
-            <div class="back-pokemon"><img src="assets/picachu.png" alt="picachu"></div>
-            <div class="power">
-             <p><b>Power lever</b></p>
-             <button>Buy</button>
-            </div>
-          </div>
+          <article class="container-pokemons" >
         </article>
-        <div class="btn-cards">
-          <button>Show more cards</button>
-          <p>120 Cards</p>
-          </div>
+        <nav class="links-paginacion">
+           
+        </nav>
       </section>
     </main>
     <footer class="footer">
       <section class="container">
         <div class="container-social-media">
           <img src="assets/logo.svg" alt="Logo" />
+          
           <p>
             Our vision is to provide convenience and help increase your sales
             business
@@ -224,6 +124,7 @@
         </div>
       </section>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
+    <script src="./scriptBuyCards.js"></script>
   </body>
 </html>
