creando carpeta Scrips y acomodando todos los scripts alli

--- a/buyCards.html
+++ b/buyCards.html
@@ -124,7 +124,7 @@
         </div>
       </section>
     </footer>
-    <script src="./script.js"></script>
-    <script src="./scriptBuyCards.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/scriptBuyCards.js"></script>
   </body>
 </html>
