--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
         </div>
       </section>
     </footer>
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
